<resources>
    <string name="app_name">CovidItalia</string>
    <string name="total_cases">CASI TOTALI</string>
    <string name="recovered">GUARITI</string>
    <string name="deats">DECEDUTI</string>
    <string name="positives">POSITIVI</string>
    <string name="alert_connection_title">Nessuna connessione internet</string>
    <string name="alert_connection_body">Hai bisogno del WI-FI o dei dati mobili per utilizzare l\'applicazione</string>
    <string name="graph_1_label">Giorni dall\'inizio dell\'epidemia</string>
    <string name="tab1">DATI</string>
    <string name="tab2">MAPPE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="region_data">Dati regionali</string>
</resources>
