<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tab1">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:orientation="vertical"><![CDATA[>





                ]]>

                <TextView
                    android:id="@+id/positive_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center"
                    android:text="@string/positives"
                    android:textColor="#F4511E"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/positive_counter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center"
                    android:textColor="#F4511E"
                    android:textSize="36sp"
                    tools:text="122.500 (+5000)" />

                <com.jjoe64.graphview.GraphView
                    android:id="@+id/graph4"
                    android:layout_width="match_parent"
                    android:layout_height="200dip"
                    android:layout_marginTop="30sp" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:gravity="center"
                    android:text="@string/graph_1_label"
                    android:textColor="#0B0B0B"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:orientation="vertical"><![CDATA[>





                ]]>

                <TextView
                    android:id="@+id/recovered_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center"
                    android:text="@string/recovered"
                    android:textColor="#43A047"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/recovered_counter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center"
                    android:textColor="#43A047"
                    android:textSize="36sp"
                    tools:text="122.500 (+5000)" />

                <com.jjoe64.graphview.GraphView
                    android:id="@+id/graph2"
                    android:layout_width="match_parent"
                    android:layout_height="200dip"
                    android:layout_marginTop="30sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:gravity="center"
                    android:text="@string/graph_1_label"
                    android:textColor="#0B0B0B"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:orientation="vertical">>

                <TextView
                    android:id="@+id/deaths_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center"
                    android:text="@string/deats"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/deaths_counter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="36sp"
                    tools:text="122.500 (+5000)" />

                <com.jjoe64.graphview.GraphView
                    android:id="@+id/graph3"
                    android:layout_width="match_parent"
                    android:layout_height="200dip"
                    android:layout_marginTop="30sp" />

                <TextView
                    android:id="@+id/textView_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:gravity="center"
                    android:text="@string/graph_1_label"
                    android:textColor="#0B0B0B"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:orientation="vertical"
                android:paddingBottom="60sp"><![CDATA[>

                ]]>

                <TextView
                    android:id="@+id/total_cases_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center"
                    android:text="@string/total_cases"
                    android:textColor="#E53935"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/total_cases_counter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center"
                    android:textColor="#E53935"
                    android:textSize="36sp"
                    tools:text="122.500 (+5000)" />

                <com.jjoe64.graphview.GraphView
                    android:id="@+id/graph"
                    android:layout_width="match_parent"
                    android:layout_height="200dip"
                    android:layout_marginTop="30sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:gravity="center"
                    android:text="@string/graph_1_label"
                    android:textColor="#0B0B0B"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>